// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToAlbumBar should be correctly rendered for existing album 1`] = `
<ResourcesActionBar
  closeButtonText="Отменить"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "add-to-album-bar",
      },
      "entityMixes": Array [],
      "entityMods": Object {},
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  delay={true}
  fixed={true}
  onClose={[Function]}
  onTransitionEnd={[Function]}
  setRef={[Function]}
  theme="black"
  visible={true}
>
  <ResourcesActionBar.Left>
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "no-photo",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Файлы не выбраны
    </span>
  </ResourcesActionBar.Left>
  <ResourcesActionBar.Right>
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "select-photo",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Выберите файлы, чтобы добавить их в альбом
    </span>
    <Button
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "button",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      disabled={true}
      onClick={[Function]}
      size="m"
      view="action"
    >
      Добавить в альбом
    </Button>
  </ResourcesActionBar.Right>
</ResourcesActionBar>
`;

exports[`AddToAlbumBar should be correctly rendered for new album 1`] = `
<ResourcesActionBar
  closeButtonText="Отменить"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "add-to-album-bar",
      },
      "entityMixes": Array [],
      "entityMods": Object {},
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  delay={true}
  fixed={true}
  onClose={[Function]}
  onTransitionEnd={[Function]}
  setRef={[Function]}
  theme="black"
  visible={true}
>
  <ResourcesActionBar.Left>
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "no-photo",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Файлы не выбраны
    </span>
  </ResourcesActionBar.Left>
  <ResourcesActionBar.Right>
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "select-photo",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Выберите файлы, чтобы добавить их в альбом
    </span>
    <Button
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "button",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      disabled={false}
      onClick={[Function]}
      size="m"
      view="action"
    >
      Создать альбом
    </Button>
  </ResourcesActionBar.Right>
</ResourcesActionBar>
`;

exports[`AddToAlbumBar should correctly render selected items' count for existing album 1`] = `
<ResourcesActionBar
  closeButtonText="Отменить"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "add-to-album-bar",
      },
      "entityMixes": Array [],
      "entityMods": Object {},
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  delay={true}
  fixed={true}
  onClose={[Function]}
  onTransitionEnd={[Function]}
  setRef={[Function]}
  theme="black"
  visible={true}
>
  <ResourcesActionBar.Left>
    <UfoSelectionInfo
      isPersonalAlbum={false}
      isPhotoslice={true}
      missingSelectedCount={0}
      onCheckboxChange={[Function]}
      selectedCount={1}
      visible={true}
    />
  </ResourcesActionBar.Left>
  <ResourcesActionBar.Right>
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "select-photo",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Выберите файлы, чтобы добавить их в альбом
    </span>
    <Button
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "button",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      disabled={false}
      onClick={[Function]}
      size="m"
      view="action"
    >
      Добавить в альбом
    </Button>
  </ResourcesActionBar.Right>
</ResourcesActionBar>
`;

exports[`AddToAlbumBar should correctly render selected items' count for new album 1`] = `
<ResourcesActionBar
  closeButtonText="Отменить"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "add-to-album-bar",
      },
      "entityMixes": Array [],
      "entityMods": Object {},
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  delay={true}
  fixed={true}
  onClose={[Function]}
  onTransitionEnd={[Function]}
  setRef={[Function]}
  theme="black"
  visible={true}
>
  <ResourcesActionBar.Left>
    <UfoSelectionInfo
      isPersonalAlbum={false}
      isPhotoslice={true}
      missingSelectedCount={0}
      onCheckboxChange={[Function]}
      selectedCount={1}
      visible={true}
    />
  </ResourcesActionBar.Left>
  <ResourcesActionBar.Right>
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "select-photo",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Выберите файлы, чтобы добавить их в альбом
    </span>
    <Button
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "button",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      disabled={false}
      onClick={[Function]}
      size="m"
      view="action"
    >
      Создать альбом
    </Button>
  </ResourcesActionBar.Right>
</ResourcesActionBar>
`;

exports[`AddToAlbumBar should render only digits on mobile devices 1`] = `
<ResourcesActionBar
  closeButtonText="Отменить"
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "add-to-album-bar",
      },
      "entityMixes": Array [],
      "entityMods": Object {},
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  delay={true}
  fixed={true}
  onClose={[Function]}
  onTransitionEnd={[Function]}
  setRef={[Function]}
  theme="black"
  visible={true}
>
  <ResourcesActionBar.Left>
    <UfoSelectionInfo
      isPersonalAlbum={false}
      isPhotoslice={true}
      missingSelectedCount={0}
      onCheckboxChange={[Function]}
      selectedCount={2}
      visible={true}
    />
  </ResourcesActionBar.Left>
  <ResourcesActionBar.Right>
    <span
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "select-photo",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
    >
      Выберите файлы, чтобы добавить их в альбом
    </span>
    <Button
      className={
        BemNamingEntity {
          "entity": Object {
            "block": "add-to-album-bar",
            "elem": "button",
          },
          "entityMixes": Array [],
          "entityMods": Object {},
          "naming": Object {
            "stringify": [Function],
          },
        }
      }
      disabled={false}
      onClick={[Function]}
      size="m"
      view="action"
    >
      Добавить в альбом
    </Button>
  </ResourcesActionBar.Right>
</ResourcesActionBar>
`;
